# scale-info

./: CHANGELOG.md  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: impl_wrapper.rs  lib.rs  trait_bounds.rs
src/: build.rs  form.rs  lib.rs  registry.rs  tests.rs
src/ty/: mod.rs
test_suite/: Cargo.toml
test_suite/derive_tests_no_std/: Cargo.toml
test_suite/derive_tests_no_std/src/: main.rs
test_suite/tests/: codec.rs  derive.rs  json.rs
test_suite/tests/ui/: fail_missing_derive.rs  fail_non_static_lifetime.rs  fail_unions.rs  pass_basic_generic_type.rs  pass_complex_generic_self_referential_type.rs  pass_non_static_lifetime.rs  pass_self_referential.rs
