[package]
name = "tetsy-scale-info"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/tetsy-scale-info"
documentation = "https://docs.rs/tetsy-scale-info"
homepage = "https://www.parity.io/"
description = "Info about SCALE encodable Rust types"
categories = ["no-std", "encoding"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
cfg-if = "1.0"
tetsy-scale-info-derive = { version = "0.3.0", path = "derive", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive", "alloc"] }
derive_more = { version = "0.99.1", default-features = false, features = ["from"] }
scale = { package = "tetsy-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "scale/std",
]
derive = [
    "tetsy-scale-info-derive"
]

[workspace]
members = [
    "derive",
    "test_suite",
]
