[package]
name = "tetsy-scale-info"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy Info about SCALE encodable Rust types"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies", "no-std", "encoding" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-scale-info"

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
tetsy-scale-info-derive = { version = "0.2.0", path = "derive", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
derive_more = { version = "0.99.1", default-features = false, features = ["from"] }
scale = { package = "tetsy-scale-codec", version = "1.3", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde/std",
	"scale/std"
]
derive = [
	"tetsy-scale-info-derive"
]

[workspace]
members = [
	"derive",
	"test_suite",
]
