[package]
name = "tetsy-scale-info-derive"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>", "Centrality Developers <support@centrality.ai>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Derive type info for SCALE encodable types"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies", "no-std", "encoding" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-scale-info"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
